--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -26,7 +26,7 @@
     <header>
         <a href="/">
             <h1>
-                <img class="fsnotes_logo" src="/img/icon.png" />
+                <img class="fsnotes_logo" src="/img/icon.webp" />
                 <span>FSNotes</span>
             </h1>
         </a>
