--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,20 @@
     <footer>
-        © Oleksandr Hlushchenko, 2017–2022 FSNotes
+        <h2 style="text-align: center">Mac App Store & App Store</h2>
+
+        <p style="text-align: center;" class="app_store_buttons">
+            <a href="https://itunes.apple.com/app/fsnotes/id1277179284">
+                <img src="/img/badge-download-on-the-mac-app-store.svg" alt="">
+            </a>
+
+            <a href="https://itunes.apple.com/app/fsnotes-manager/id1346501102">
+                <img src="/img/badge-download-on-the-app-store.svg" alt="">
+            </a>
+        </p>
+
+        <span style="text-align: center; margin: 50px auto 0 auto; display: block; color: #0463A1">★★★★★</span>
+        <br>
+
+        <p>© Oleksandr Hlushchenko, 2017–2022 FSNotes</p>
     </footer>
 </body>
 </html>
