- Fixes and improvements

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,7 +31,7 @@
         <h3 style="text-align: center; margin: 0" id="features">Desktop and Mobile Apps</h3>
 
         <p style="text-align: center;">
-            <img src="img/front/fsnotes5.webp" style="width: 900px; border-radius: 5px;" />
+            <img src="img/front/fsnotes5.webp" style="border-radius: 5px;" />
         </p>
         <p style="text-align: center">iCloud Drive synchronization</p>
     </div>
