--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,8 +11,10 @@
             </a>
         </p>
 
-        <span style="text-align: center; margin: 50px auto 0 auto; display: block; color: #0463A1">★★★★★</span>
-        <br>
+        <p>
+            <span style="text-align: center; margin: 30px auto 0 auto; display: block; color: #5A6369">∞</span>
+        </p>
+
 
         <p>© Oleksandr Hlushchenko, 2017–2022 FSNotes</p>
     </footer>
