--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,7 +49,7 @@ textarea {
 /* custom */
 
 header {
-    max-width: 900px;
+    max-width: 1000px;
     margin: 40px auto;
     padding: 0 20px;
     text-align: center;
@@ -143,7 +143,7 @@ img {
 }
 
 .container {
-    max-width: 900px;
+    max-width: 1000px;
     margin: 40px auto 40px auto;
     padding: 0 20px;
 }
@@ -151,7 +151,7 @@ img {
 .basic_container {
     margin: 0 auto;
     padding: 30px 0;
-    width: 900px;
+    width: 1000px;
     max-width: 90%;
 }
 
@@ -177,10 +177,10 @@ table td p {
 .navi_sup {
     border-radius: 4px;
     padding: 2px;
-    border: 1px solid #0463A1;
+    border: 1px solid #5A6369;
 }
     .navi_sup a {
-        color: #0B98F5;
+        color: #5A6369;
         text-decoration: none;
     }
 
@@ -205,7 +205,7 @@ table td p {
 }
 
 .main_page img {
-    max-width: 90%;
+    max-width: 98%;
 }
 
 .content img {
@@ -230,6 +230,6 @@ table td p {
 
 .content {
     margin: 0 auto;
-    width: 900px;
+    width: 1024px;
     max-width: 100%;
 }
