- Adds FSNotes 6 for macOS

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -39,7 +39,7 @@
                 <a href="/#features">macOS</a>
 
                 <sup class="navi_sup">
-                    <a href="/fsnotes5-for-mac/">v5</a>
+                    <a style="color: red" href="/fsnotes6-for-mac/">v6</a>
                 </sup>
             </li>
             <li>
