FSNotes 6 for iOS

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -92,7 +92,7 @@
         <h2>Many more</h2>
 
         <ul>
-            <li><strong>Markdown-first</strong>. Also supports plaintext and RTF files.</li>
+            <li><strong>Markdown-first</strong>. Supports plaintext files.</li>
             <li><strong>Fast and lightweight</strong>. Works smoothly with 10k+ files.</li>
             <li><strong>Access anywhere</strong>. Sync with iCloud Drive or Dropbox.</li>
             <li><strong>Multi-folder</strong> storage.</li>
@@ -118,24 +118,25 @@
             <h3 id="ios_features" style="margin: 10px 0 20px 0">FSNotes for iOS</h3>
             <ul class="ios-screens">
                 <li>
-                    <img src="img/front/iOS-screen-1.webp?v=1.0" class="ios-screen" />
+                    <img src="img/fsnotes6-ios/s1x.png?v=1.0" class="ios-screen" />
                 </li>
                 <li>
-                    <img src="img/front/iOS-screen-2.webp?v=1.0" class="ios-screen" />
+                    <img src="img/fsnotes6-ios/s2x.png?v=1.0" class="ios-screen" />
                 </li>
             </ul>
 
             <ul>
                 <li><strong>Sync via iCloud Drive</strong>.</li>
-                <li><strong>3D Touch</strong> and <strong>configurable keyboard.</strong></li>
                 <li><strong>TextBundle</strong> and <strong>EncryptedTextBundle</strong> containers.</li>
                 <li><strong>Pinned</strong> notes kept in sync with the desktop app.</li>
-                <li><strong>Dynamic fonts</strong> (iOS 11+).</li>
-                <li><strong>Night mode</strong> by location or screen brightness.</li>
+                <li><strong>Dynamic fonts</strong></li>
+                <li><strong>Dark mode</strong> by location or screen brightness.</li>
                 <li><strong>Sharing</strong> extension.</li>
                 <li><strong>Encrypted note</strong> support.</li>
-                <li><strong>Auto versioning</strong>.</li>
+                <li><strong>Deep git integration</strong>.</li>
+                <li><strong>Encrypted folders</strong> support.</li>
                 <li>Organize with <strong>tags</strong>.</li>
+                <li><strong>Web Pages Creation</strong>.</li>
             </ul>
         </div>
     </div>
