--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -39,14 +39,14 @@
                 <a href="/#features">macOS</a>
 
                 <sup class="navi_sup">
-                    <a style="color: red" href="/fsnotes6-for-mac/">v6</a>
+                    <a href="/fsnotes6-for-mac/">v6</a>
                 </sup>
             </li>
             <li>
                 <a href="/#ios_features">iOS</a>
 
                 <sup class="navi_sup">
-                    <a href="/fsnotes5-for-ios/">v5</a>
+                    <a href="/fsnotes6-for-ios/">v6</a>
                 </sup>
             </li>
             <li>
