FSNotes 6 for iOS

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -118,10 +118,10 @@
             <h3 id="ios_features" style="margin: 10px 0 20px 0">FSNotes for iOS</h3>
             <ul class="ios-screens">
                 <li>
-                    <img src="img/fsnotes6-ios/s1x.png?v=1.0" class="ios-screen" />
+                    <img src="img/fsnotes6-ios/s1x.webp?v=1.0" class="ios-screen" />
                 </li>
                 <li>
-                    <img src="img/fsnotes6-ios/s2x.png?v=1.0" class="ios-screen" />
+                    <img src="img/fsnotes6-ios/s2x.webp?v=1.0" class="ios-screen" />
                 </li>
             </ul>
 
