--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -36,14 +36,14 @@
                 <a href="/#pricing">Pricing</a>
             </li>
             <li>
-                <a href="/#features">macOS</a>
+                <a href="/fsnotes6-for-mac/">macOS</a>
 
                 <sup class="navi_sup">
                     <a href="/fsnotes6-for-mac/">v6</a>
                 </sup>
             </li>
             <li>
-                <a href="/#ios_features">iOS</a>
+                <a href="/fsnotes6-for-ios/">iOS</a>
 
                 <sup class="navi_sup">
                     <a href="/fsnotes6-for-ios/">v6</a>
