--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,6 +21,16 @@
     <meta name="theme-color" content="#ffffff">
     
     <link rel="stylesheet" href="/css/main.css?v=1.1">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3DC2G73331"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-3DC2G73331');
+    </script>
 </head>
 <body>
     <header>
