--- a/layouts/index.html
+++ b/layouts/index.html
@@ -187,7 +187,7 @@
 
             <p>Please feel free to send feedback and questions by email to <a href="mailto: support@fsnot.es">support@fsnot.es</a></p>
 
-            <p>Telegram: <a target="_blank" href="https://t.me/fsnotesapp">https://t.me/fsnotesapp</a></p>
+            <p>IRC: <a target="_blank" href="https://web.libera.chat/#fsnotes">irc.libera.chat/fsnotes</a></p>
         </div>
     </div>
 </div>
