- Adds mastodon account

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -151,7 +151,7 @@
 
                 </td>
                 <td>
-                    <h3 style="font-size: 19px">Twitter <img style="margin: -3px 0 0 0" height="19px" src="img/twitter.webp" /></h3>
+                    <h3 style="font-size: 19px">Mastodon <img style="margin: -3px 0 0 0" height="19px" src="img/mastodon.webp" /></h3>
                 </td>
             </tr>
             <tr>
@@ -159,7 +159,7 @@
                     <p><a href="https://github.com/glushchenko/fsnotes" target="_blank">Repository for macOS/iOS app</a><p>
                 </td>
                 <td>
-                    <a href="https://twitter.com/fsnotesapp" target="_blank">https://twitter.com/fsnotesapp</a>
+                    <a href="https://mastodon.social/@fluder/tagged/fsnotes" target="_blank">https://mastodon.social/@fluder</a>
                 </td>
             </tr>
             <tr>
