- Fixes and improvements

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -138,6 +138,15 @@
                 <li>Organize with <strong>tags</strong>.</li>
                 <li><strong>Web Pages Creation</strong>.</li>
             </ul>
+
+            <p>
+                Please <strong>do not</strong> buy if such features are important to you in mobile FSNotes:
+            </p>
+
+            <ul>
+                <li><strong style="color: red">NO</strong> subfolders and no subfolders are planned!</li>
+                <li><strong style="color: red">NO</strong> Dropbox, WebDAV, Google Drive sync.</li>
+            </ul>
         </div>
     </div>
 
@@ -187,7 +196,7 @@
 
             <p>Please feel free to send feedback and questions by email to <a href="mailto: support@fsnot.es">support@fsnot.es</a></p>
 
-            <p>IRC: <a target="_blank" href="https://web.libera.chat/#fsnotes">irc.libera.chat/fsnotes</a></p>
+            <p>Telegram: <a target="_blank" href="https://t.me/fsnotesapp">https://t.me/fsnotesapp</a></p>
         </div>
     </div>
 </div>
