--- a/layouts/index.html
+++ b/layouts/index.html
@@ -94,7 +94,7 @@
         <ul>
             <li><strong>Markdown-first</strong>. Supports plaintext files.</li>
             <li><strong>Fast and lightweight</strong>. Works smoothly with 10k+ files.</li>
-            <li><strong>Access anywhere</strong>. Sync with iCloud Drive or Dropbox.</li>
+            <li><strong>Access anywhere</strong>. Sync with iCloud Drive.</li>
             <li><strong>Multi-folder</strong> storage.</li>
             <li><strong>Keyboard-centric</strong>. <a href="https://brettterpstra.com/projects/nvalt/">nvalt</a>-inspired controls and shortcuts.</li>
             <li><strong>Syntax highlighting</strong> within code blocks. Supports over 170 programming languages.</li>
