- Fixes and improvements

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -96,7 +96,7 @@
             <li><strong>Fast and lightweight</strong>. Works smoothly with 10k+ files.</li>
             <li><strong>Access anywhere</strong>. Sync with iCloud Drive.</li>
             <li><strong>Multi-folder</strong> storage.</li>
-            <li><strong>Keyboard-centric</strong>. <a href="https://brettterpstra.com/projects/nvalt/">nvalt</a>-inspired controls and shortcuts.</li>
+            <li><strong>Keyboard-centric</strong>. <a href="https://en.wikipedia.org/wiki/Notational_Velocity">Notational Velocity</a>-inspired controls and shortcuts.</li>
             <li><strong>Syntax highlighting</strong> within code blocks. Supports over 170 programming languages.</li>
             <li><strong>In-line image</strong> support.</li>
             <li>Organize with <strong>tags</strong>.</li>
