--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,7 +12,9 @@
     </title>
     <meta name="description" content="Modern notes manager for macOS/iOS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+{{ if .Permalink }}
+    <link rel="canonical" href="{{ .Permalink }}" />
+{{ end }}
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
