--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     
-    <link rel="stylesheet" href="/css/main.css?v=1.1">
+    <link rel="stylesheet" href="/css/main.css?v=1.2">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3DC2G73331"></script>
@@ -47,6 +47,11 @@
             <li>
                 <a href="/#pricing">Pricing</a>
             </li>
+
+            <li>
+                <a href="/fsnotes7/">FSNotes 7</a>
+            </li>
+            <!--
             <li>
                 <a href="/fsnotes6-for-mac/">macOS</a>
 
@@ -54,6 +59,7 @@
                     <a href="/fsnotes6-for-mac/">v6</a>
                 </sup>
             </li>
+
             <li>
                 <a href="/fsnotes6-for-ios/">iOS</a>
 
@@ -61,6 +67,8 @@
                     <a href="/fsnotes6-for-ios/">v6</a>
                 </sup>
             </li>
+
+            -->
             <li>
                 <a href="/#community">Community</a>
             </li>
