--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,7 +31,7 @@
         <h3 style="text-align: center; margin: 0" id="features">Desktop and Mobile Apps</h3>
 
         <p style="text-align: center;">
-            <img src="img/front/fsnotes5.webp" style="border-radius: 5px;" />
+            <img src="img/fsnotes7/fsnotes7_macOS_iOS.webp" style="border-radius: 5px;" />
         </p>
         <p style="text-align: center">iCloud Drive synchronization</p>
     </div>
@@ -77,14 +77,14 @@
 
     <div class="container">
         <h3 style="text-align: center; margin: 0 0 50px 0">Dark Mode</h3>
-        <img class="center" src="img/front/darkmode.webp" width="900" style="border-radius: 5px" alt="Dark Mode on macOS and iOS"/>
+        <img class="center" src="img/fsnotes7/fsnotes7_macOS_Dark.webp" width="900" style="border-radius: 5px" alt="Dark Mode on macOS and iOS"/>
         <p style="text-align: center">Balanced, polished dark theme</p>
     </div>
 
     <div class="wide_container">
         <div class="basic_container">
             <h3 style="text-align: center; margin: 10px 0 30px 0" id="git">Optional Git versioning and backups</h3>
-            <img class="center" src="img/front/git.webp" width="450" style="border-radius: 5px" alt="Git versioning and scheduled backups"/>
+            <img class="center" src="img/fsnotes7/fsnotes7_git.webp" width="450" style="border-radius: 5px" alt="Git versioning and scheduled backups"/>
         </div>
     </div>
 
@@ -97,11 +97,11 @@
             <li><strong>Access anywhere</strong>. Sync with iCloud Drive.</li>
             <li><strong>Multi-folder</strong> storage.</li>
             <li><strong>Keyboard-centric</strong>. <a href="https://en.wikipedia.org/wiki/Notational_Velocity">Notational Velocity</a>-inspired controls and shortcuts.</li>
-            <li><strong>Syntax highlighting</strong> within code blocks. Supports over 170 programming languages.</li>
+            <li><strong>Syntax highlighting</strong> within code blocks. Supports over 30 programming languages.</li>
             <li><strong>In-line image</strong> support.</li>
             <li>Organize with <strong>tags</strong>.</li>
             <li><strong>Cross-note links</strong> using <code>[[double brackets]]</code>.</li>
-            <li><strong>Elastic two-pane view</strong>. Choose a vertical or horizontal layout.</li>
+            <li><strong>Elastic two-pane view</strong>.</li>
             <li><strong>External editor</strong> support (changes seamless live sync with UI).</li>
             <li><strong>Pin</strong> important notes.</li>
             <li><strong>Quickly copy notes</strong> to the clipboard.</li>
@@ -118,10 +118,10 @@
             <h3 id="ios_features" style="margin: 10px 0 20px 0">FSNotes for iOS</h3>
             <ul class="ios-screens">
                 <li>
-                    <img src="img/fsnotes6-ios/s1x.webp?v=1.0" class="ios-screen" />
+                    <img src="img/fsnotes7/fsnotes7_iOS.webp" class="ios-screen" />
                 </li>
                 <li>
-                    <img src="img/fsnotes6-ios/s2x.webp?v=1.0" class="ios-screen" />
+                    <img src="img/fsnotes7/fsnotes7_iOS_Dark.webp" class="ios-screen" />
                 </li>
             </ul>
 
