- fixes front page

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,7 +38,7 @@
     <header>
         <a href="/">
             <h1>
-                <img class="fsnotes_logo" src="/img/icon.webp" />
+                <img class="fsnotes_logo" src="/img/icon.webp?v=2" />
                 <span>FSNotes</span>
             </h1>
         </a>
