- fixes front page

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -49,7 +49,7 @@
             </li>
 
             <li>
-                <a href="/fsnotes7/">FSNotes 7</a>
+                <a href="/v7/">FSNotes 7</a>
             </li>
             <!--
             <li>
