- fixes front page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,7 +31,7 @@
         <h3 style="text-align: center; margin: 0" id="features">Desktop and Mobile Apps</h3>
 
         <p style="text-align: center;">
-            <img src="img/fsnotes7/FSNotes7_macOS_iOS.webp" style="border-radius: 5px;" />
+            <img src="img/fsnotes7/FSNotes7_macOS_iOS.webp?v=2" style="border-radius: 5px;" />
         </p>
         <p style="text-align: center">iCloud Drive synchronization</p>
     </div>
@@ -118,10 +118,10 @@
             <h3 id="ios_features" style="margin: 10px 0 20px 0">FSNotes for iOS</h3>
             <ul class="ios-screens">
                 <li>
-                    <img src="img/fsnotes7/FSNotes7_iOS.webp" class="ios-screen" />
+                    <img src="img/fsnotes7/FSNotes7_iOS.webp?v=2" class="ios-screen" />
                 </li>
                 <li>
-                    <img src="img/fsnotes7/FSNotes7_iOS_Dark.webp" class="ios-screen" />
+                    <img src="img/fsnotes7/FSNotes7_iOS_Dark.webp?v=2" class="ios-screen" />
                 </li>
             </ul>
 
