- fixes front page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -77,7 +77,7 @@
 
     <div class="container">
         <h3 style="text-align: center; margin: 0 0 50px 0">Dark Mode</h3>
-        <img class="center" src="img/fsnotes7/FSNotes7_macOS_Dark.webp" width="900" style="border-radius: 5px" alt="Dark Mode on macOS and iOS"/>
+        <img class="center" src="img/fsnotes7/FSNotes7_macOS_Dark.webp?v=2" width="900" style="border-radius: 5px" alt="Dark Mode on macOS and iOS"/>
         <p style="text-align: center">Balanced, polished dark theme</p>
     </div>
 
