- fixes front page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -173,7 +173,7 @@
             </tr>
             <tr>
                 <td>
-                    <p><a href="https://github.com/glushchenko/fsnotes/issues" target="_blank">Bugs and requests</a><p>
+                    <p><a href="https://github.com/glushchenko/fsnotes/issues" target="_blank">Bug reports</a> and <a href="https://github.com/glushchenko/fsnotes/pulls" target="_blank">pull requests</a> are always appreciated!<p>
                 </td>
                 <td>
 
@@ -192,9 +192,9 @@
 
     <div class="wide_container">
         <div class="basic_container" style="text-align: center;">
-            <h2 style="margin: 0" id="feedback">Feedback</h2>
+            <h2 style="margin: 0" id="support">Support</h2>
 
-            <p>Please feel free to send feedback and questions by email to <a href="mailto: support@fsnot.es">support@fsnot.es</a></p>
+            <p>Please feel free to send your questions by email to <a href="mailto: support@fsnot.es">support@fsnot.es</a></p>
 
             <p>Telegram: <a target="_blank" href="https://t.me/fsnotesapp">https://t.me/fsnotesapp</a></p>
         </div>
