--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -73,7 +73,7 @@
                 <a href="/#community">Community</a>
             </li>
             <li>
-                <a href="/#feedback">Feedback</a>
+                <a href="/#support">Support</a>
             </li>
             <li>
                 <a href="https://github.com/glushchenko/fsnotes/wiki" target="_blank">Wiki</a>
