--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -78,6 +78,9 @@
             <li>
                 <a href="https://github.com/glushchenko/fsnotes/wiki" target="_blank">Wiki</a>
             </li>
+            <li>
+                <a href="/faq/" target="_blank">FAQ</a>
+            </li>
         </ul>
     </header>
 
